--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.3",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.1",
+    "printed": "^0.18.4",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
   }
