--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "pnpm run astro dev",
     "build": "pnpm run astro check && pnpm run astro build",
     "preview": "pnpm run astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "release": "release-it"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.1",
@@ -23,5 +24,8 @@
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "release-it": "19.0.3"
   }
 }
