Update Prettier configuration and dependencies in package.json and pnpm-lock.yaml for improved formatting and support for Astro and Tailwind CSS

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,23 @@
 {
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "semi": false,
+  "trailingComma": "es5",
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-astro", "prettier-plugin-tailwindcss"],
+  "ignorePatterns": ["pnpm-lock.yaml"],
+  "overrides": [
+    {
+      "files": "*.astro",
+      "options": {
+        "parser": "astro"
+      }
+    },
+    {
+      "files": "*.md",
+      "options": {
+        "proseWrap": "always"
+      }
+    }
+  ]
 }
