--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "pnpm run astro check && pnpm run astro build",
     "preview": "pnpm run astro preview",
     "astro": "astro",
-    "release": "release-it"
+    "release": "release-it",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@astrojs/check": "^0.9.1",
@@ -26,6 +27,9 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "0.6.12",
     "release-it": "19.0.3"
   },
   "packageManager": "pnpm@10.11.1"
